# HVA-Motion_and_Vision

./: .gitignore  Motion and Vision.sln  README.md
CCD/: App.xaml  App.xaml.cs  Bone.cs  BoneData.cs  CCD.xaml.cs  CCDViewModel.cs  CCD_Demo.xaml  CCD_Demo.xaml.cs  Kinematics.cs  MainWindow.xaml  MainWindow.xaml.cs
CCD/Mvvm/: BaseViewModel.cs  RelayCommand.cs
CCD/Properties/: Resources.Designer.cs
Motion/: Motion and Vision.sln
Motion/CCD/: App.xaml.cs  CCD.csproj  CCD.xaml  MainWindow.xaml.cs
Motion/CCD/Properties/: AssemblyInfo.cs  Settings.Designer.cs
Motion/Kinematics_cpp/: CMakeLists.txt  Kinematics
Motion/Kinematics_cpp/include/: Bone.hpp  CCD.hpp  Kinematics.hpp  Vector3.hpp
Motion/Kinematics_cpp/src/: Bone.cpp  CCD.cpp  Kinematics.cpp  Vector3.cpp  main.cpp
Motion/RobotArm/: App.xaml  MainWindow.xaml.cs
RobotArm/: App.xaml  App.xaml.cs  ArmSegment.cs  Kinematics.cs  MainWindow.xaml  MainWindow.xaml.cs  Math.cs  RobotArm.csproj  Segment.cs  Segment1.cs  old.cs
Vision/: CMakeLists.txt  CheckBracket  CheckConnector  CheckDice  CheckDiceBlobs
Vision/Assignment1/: CheckConnector.cpp  CheckConnector.hpp
Vision/Assignment10/: CheckDice.cpp
Vision/Assignment2/: CheckBracket.cpp  CheckBracket.hpp
Vision/Assignment9/: CheckDice.cpp  CheckDice.hpp
Vision/common/: CMakeLists.txt  FileUtils.cpp  FileUtils.hpp
